Agrego ejercicios teoricos de Statecharts.

--- a/4 Ano/Ingenieria del Software I/Examenes/CSP y Statecharts.lyx
+++ b/4 Ano/Ingenieria del Software I/Examenes/CSP y Statecharts.lyx
@@ -1260,6 +1260,56 @@ Solución
 
 \color inherit
 .
+\end_layout
+
+\end_deeper
+\begin_layout Enumerate
+Un estado temporizado puede tener cotas temporales 
+\begin_inset Quotes fld
+\end_inset
+
+
+\color purple
+
+\begin_inset Formula $<T$
+\end_inset
+
+
+\color inherit
+
+\begin_inset Quotes frd
+\end_inset
+
+ y 
+\begin_inset Quotes fld
+\end_inset
+
+
+\color purple
+
+\begin_inset Formula $t<$
+\end_inset
+
+
+\color inherit
+
+\begin_inset Quotes frd
+\end_inset
+
+.
+ Explique el significado de dichas cotas.
+\end_layout
+
+\begin_deeper
+\begin_layout Paragraph
+Solución
+\end_layout
+
+\begin_layout Standard
+COMPLETAR.
+\end_layout
+
+\begin_layout Standard
 \begin_inset Newpage pagebreak
 \end_inset
 
